deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c2c
  namespace: vtlib
  annotations:
    # Task input files can be up to 25 MB.
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  ingressClassName: nginx
  rules:
    - host: vtlibai-cc.endeavour.cs.vt.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: c2c
                port:
                  number: 3000
